change to false

--- a/dir1/d/index.html
+++ b/dir1/d/index.html
@@ -7,11 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-   
-   
-    <ul>
-        <li><a href="/categories/cat1/">cat1</a></li>
-    </ul>
-   
+    <h1>header</h1>
+    <hr>
+    <h3>D</h3>
+    <h3>2021-06-20 23:01:39 &#43;0800 CST</h3>
+    
+    <hr>
+    <h1>footer</h1>
 </body>
 </html>
